<resources>
    <string name="abc_action_bar_home_description">Перейти на главный экран</string>
    <string name="abc_action_bar_up_description">Перейти вверх</string>
    <string name="abc_action_menu_overflow_description">Другие параметры</string>
    <string name="abc_action_mode_done">Готово</string>
    <string name="abc_activity_chooser_view_see_all">Показать всё</string>
    <string name="abc_activitychooserview_choose_application">Выбрать приложение</string>
    <string name="abc_searchview_description_clear">Удалить запрос</string>
    <string name="abc_searchview_description_query">Поисковый запрос</string>
    <string name="abc_searchview_description_search">Поиск</string>
    <string name="abc_searchview_description_submit">Отправить запрос</string>
    <string name="abc_searchview_description_voice">Голосовой поиск</string>
    <string name="abc_shareactionprovider_share_with">Открыть доступ</string>
    <string name="abc_shareactionprovider_share_with_application">Открыть доступ пользователю %s</string>
    <string name="alwaysUse">По умолчанию для этого действия</string>
    <string name="date_time_set">Установить</string>
    <string name="mc_allow">Разрешить</string>
    <string name="mc_alway_allow">Разрешить</string>
    <string name="mc_cancel">Отмена</string>
    <string name="mc_cancel_button_text">Отмена</string>
    <string name="mc_cancel_collected_message">Убрать из избранного</string>
    <string name="mc_cancel_praised_message">Отменить отзыв</string>
    <string name="mc_change_num">Обновить</string>
    <string name="mc_collected_message">Статус избранного</string>
    <string name="mc_custom_date_time_gregorian">Григор.</string>
    <string name="mc_custom_date_time_lunar">Лунный</string>
    <string name="mc_date_time_day">д</string>
    <string name="mc_date_time_hour">ч</string>
    <string name="mc_date_time_min">м</string>
    <string name="mc_date_time_month">м</string>
    <string name="mc_date_time_sec">с</string>
    <string name="mc_date_time_set">Установить</string>
    <string name="mc_date_time_year">г</string>
    <string name="mc_description_target_answer">Правильный вариант</string>
    <string name="mc_description_target_decline">Отклонить</string>
    <string name="mc_disable">Отключить</string>
    <string name="mc_every_day">Ежедневно</string>
    <string name="mc_friday">ПТ</string>
    <string name="mc_go_Refreshing">Обновить</string>
    <string name="mc_hour">час</string>
    <string name="mc_is_Refreshing">Обновление</string>
    <string name="mc_last_refresh">последнее обновление</string>
    <string name="mc_last_refresh_hour">" час. назад"</string>
    <string name="mc_last_refresh_just_now">сейчас</string>
    <string name="mc_last_refresh_minute">мин. назад</string>
    <string name="mc_last_refresh_second">сек. назад</string>
    <string name="mc_loading_view_text">Загрузка</string>
    <string name="mc_minute">мин</string>
    <string name="mc_monday">ПН</string>
    <string name="mc_never">Единожды</string>
    <string name="mc_permission_apply">Разрешения</string>
    <string name="mc_permission_message_content">%1$s требуется %2$s, %3$d разрешений</string>
    <string name="mc_pm_allow_check_app">Разрешить</string>
    <string name="mc_pm_allow_dialog_push">Разрешить Push-уведомления</string>
    <string name="mc_pm_bluetooth">Bluetooth</string>
    <string name="mc_pm_call">Вызов</string>
    <string name="mc_pm_call_log">Читать журнал вызовов</string>
    <string name="mc_pm_camera">Камера (Фото/Видео)</string>
    <string name="mc_pm_close">Выкл.</string>
    <string name="mc_pm_contacts">Читать контакты</string>
    <string name="mc_pm_dialog_push">Всплывающие Push-уведомления</string>
    <string name="mc_pm_dlg_cancel">Отмена</string>
    <string name="mc_pm_dlg_ok">ОК</string>
    <string name="mc_pm_location">Местоположение</string>
    <string name="mc_pm_network">Передача данных</string>
    <string name="mc_pm_nfc">NFC</string>
    <string name="mc_pm_not_allow_check_app">Запретить</string>
    <string name="mc_pm_not_allow_dialog_push">Отключить</string>
    <string name="mc_pm_online_intenert">Интернет</string>
    <string name="mc_pm_open">Открыть</string>
    <string name="mc_pm_r_mms">Читать MMS</string>
    <string name="mc_pm_r_sms">Читать SMS</string>
    <string name="mc_pm_recordaudio_local">Аудиозаписи</string>
    <string name="mc_pm_recordaudio_phone">Записи разговоров</string>
    <string name="mc_pm_s_mms">Послать MMS</string>
    <string name="mc_pm_s_sms">Послать SMS</string>
    <string name="mc_pm_set_bluetooth_on">Включить Bluetooth</string>
    <string name="mc_pm_set_gprs_on">Включить передачу данных</string>
    <string name="mc_pm_set_wifi_on">Включить Wi-Fi</string>
    <string name="mc_pm_wlan">Wi-Fi</string>
    <string name="mc_praised_message">Нравится</string>
    <string name="mc_pull_refresh">Вниз для обновления</string>
    <string name="mc_reject">Отклонить</string>
    <string name="mc_saturday">СБ</string>
    <string name="mc_search">Поиск</string>
    <string name="mc_search_button_text">Поиск</string>
    <string name="mc_search_icon">Поиск</string>
    <string name="mc_search_icon_input_clear">Очистить</string>
    <string name="mc_search_text">Поиск</string>
    <string name="mc_second">сек</string>
    <string name="mc_selectionbutton_all">Все</string>
    <string name="mc_sunday">ВС</string>
    <string name="mc_thursday">ЧТ</string>
    <string name="mc_time_picker_leap">Встав.</string>
    <string name="mc_tuesday">ВТ</string>
    <string name="mc_value_checked">Выбран</string>
    <string name="mc_value_not_checked">Не выбран</string>
    <string name="mc_voice_icon">Голосовой поиск</string>
    <string name="mc_wednesday">СР</string>
    <string name="mc_weekend">Выходные</string>
    <string name="mc_working_day">Будни</string>
    <string name="mc_yes">ОК</string>
    <string name="more_item_label">Ещё</string>
    <string name="mz_action_bar_multi_choice_cancel">Отмена</string>
    <string name="mz_action_bar_multi_choice_select_all">Все</string>
    <string name="mz_action_bar_multi_choice_select_all_cancel">Нет</string>
    <string name="mz_action_bar_multi_choice_title">Выбрано: %d</string>
    <string name="mz_date_time_day">д</string>
    <string name="mz_date_time_hour">ч</string>
    <string name="mz_date_time_min">м</string>
    <string name="mz_date_time_month">м</string>
    <string name="mz_date_time_sec">с</string>
    <string name="mz_date_time_year">г</string>
    <string name="mz_network_unavailable_hint">Сеть недоступна. Проверьте настройки сети.</string>
    <string name="mz_wif_setting_dialog_message">Нет сети. Проверьте настройки сети.</string>
    <string name="mz_wif_setting_dialog_set">Установить</string>
    <string name="mzuc_cancel">Отменить</string>
    <string name="mzuc_cancel_download">Отменить загрузку</string>
    <string name="mzuc_cancel_install">Отменить установку</string>
    <string name="mzuc_delete">Удалить</string>
    <string name="mzuc_download_fail">Ошибка загрузки</string>
    <string name="mzuc_download_finish_install">Загрузка завершена, нажмите для установки</string>
    <string name="mzuc_download_finish_s" formatted="false">%s V%s загрузка завершена</string>
    <string name="mzuc_download_progress_desc_s" formatted="false">Загрузка %s %s</string>
    <string name="mzuc_downloading">Загрузка</string>
    <string name="mzuc_file_size_s">Размер: %s</string>
    <string name="mzuc_found_update_s">Доступно обновление: %s</string>
    <string name="mzuc_install_cancel_tip">Загрузка отменена</string>
    <string name="mzuc_install_fail">Ошибка установки</string>
    <string name="mzuc_install_immediately">Установить сейчас</string>
    <string name="mzuc_install_later">Установить позже</string>
    <string name="mzuc_installing">Установка</string>
    <string name="mzuc_notification_message_s">Что нового: %s</string>
    <string name="mzuc_ok">ОК</string>
    <string name="mzuc_retry">Повтор</string>
    <string name="mzuc_skip_version">Пропустить эту версию</string>
    <string name="mzuc_skip_warn_tip">Если пропустить эту версию, то предложение об установке не последует</string>
    <string name="mzuc_update_finish">Обновление завершено</string>
    <string name="mzuc_update_immediately">Обновить сейчас</string>
    <string name="mzuc_update_msg_title_s" formatted="false">%s V%s</string>
    <string name="mzuc_update_title_s" formatted="false">%s V%s версия</string>
    <string name="mzuc_wait_tip">Пожалуйста, подождите</string>
    <string name="mzuc_warn_later">Напомнить позже</string>
    <string name="mc_pattern_a_hour_before">час назад</string>
    <string name="mc_pattern_a_minute_before">минуту назад</string>
    <string name="mc_pattern_hour_before">, час. назад</string>
    <string name="mc_pattern_minute_before">, мин. назад</string>
    <string name="mc_pattern_month_day" formatted="false">%-m/%-e</string>
    <string name="mc_pattern_month_day_hour_minute" formatted="false">%-m/%-e %H:%M</string>
    <string name="mc_pattern_month_day_hour_minute_12" formatted="false">%-m/%-e %I:%M %p</string>
    <string name="mc_pattern_today">Сегодня</string>
    <string name="mc_pattern_week_month_day_hour_minute" formatted="false">%a %-m/%-e %H:%M</string>
    <string name="mc_pattern_week_month_day_hour_minute_12" formatted="false">%a %-m/%-e %I:%M %p</string>
    <string name="mc_pattern_year_month" formatted="false">%Y/%-m</string>
    <string name="mc_pattern_year_month_day" formatted="false">%Y/%-m/%-e</string>
    <string name="mc_pattern_year_month_day_hour_minute" formatted="false">%Y/%-m/%-e %H:%M</string>
    <string name="mc_pattern_year_month_day_hour_minute_12" formatted="false">%Y/%-m/%-e %I:%M %p</string>
    <string name="mc_pattern_yesterday">Вчера</string>
    <string name="Complete">Завершить</string>
    <string name="WaitTip">Пожалуйста, подождите</string>
    <string name="about_to_empire">Срок истекает</string>
    <string name="accept_award_success">Принято</string>
    <string name="accept_now">Принять сейчас</string>
    <string name="access_server_error">Система занята, пожалуйста, повторите попытку позже</string>
    <string name="account_download_app_tip">%s не установлено</string>
    <string name="add_new_address">Новый адрес</string>
    <string name="add_score_amount">+%1$s очка(ов)</string>
    <string name="address_clear">Очистить</string>
    <string name="address_detail">Детали адреса</string>
    <string name="address_save">Сохранить</string>
    <string name="empty_vip_label">VIP</string>
    <string name="exchange_recorder_money_label">￥</string>
    <string name="exchange_score_label">Очки</string>
    <string name="experience_tip">Инструкция</string>
    <string name="label_flyme_coin">My Flyme coin</string>
    <string name="label_my_address">My address</string>
    <string name="label_my_award">My award</string>
    <string name="label_my_coupon">My coupon</string>
    <string name="label_my_exchange">My exchange</string>
    <string name="label_my_score">My score</string>
    <string name="label_my_vip">My vip</string>
    <string name="label_my_wallet">Wallet</string>
    <string name="label_setting">Настройка</string>
    <string name="load_error_retry_tip">Произошла ошибка. Нажмите, чтобы повторить попытку.</string>
    <string name="loading">Загрузка</string>
    <string name="my_level">Мой уровень</string>
    <string name="no_data">Нет данных</string>
    <string name="stock_tip">В наличии: %s</string>
    <string name="title_backup">Резервное копирование</string>
    <string name="title_cloud_storage">Облачное хранилище</string>
    <string name="title_find_phone">Поиск телефона</string>
    <string name="title_more_vip">Больше привилегий</string>
    <string name="title_score_exchange">Обмен</string>
    <string name="title_sync">Синхронизация данных</string>
    <string name="title_vip_recommend">VIP совет</string>
</resources>