<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="@color/compaign_theme_color"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:meizu="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:background="@color/compaign_theme_color" android:layout_width="fill_parent" android:layout_height="76.0dip" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" android:overScrollMode="never">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:id="@id/headerLayout" android:background="@color/compaign_theme_color" android:layout_width="fill_parent" android:layout_height="@dimen/header_layout_height">
                <FrameLayout android:layout_gravity="center_horizontal" android:layout_width="@dimen/width_circle_image_view" android:layout_height="@dimen/width_circle_image_view" android:layout_marginTop="10.0dip">
                    <com.meizu.common.widget.CircleImageView android:id="@id/avatarImage" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/avatar_icon" meizu:border_color="@android:color/transparent" />
                    <TextView android:textSize="@dimen/mz_text_size_mini" android:textColor="@color/white" android:layout_gravity="end|bottom|center" android:id="@id/level" android:paddingLeft="3.0dip" android:paddingRight="3.0dip" android:layout_width="0.0dip" android:layout_height="0.0dip" />
                </FrameLayout>
                <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="18.0dip">
                    <TextView android:textSize="@dimen/mz_text_size_medium" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_nick_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="134.0dip" android:singleLine="true" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
                    <FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_marginStart="6.0dip" android:layout_toEndOf="@id/tv_nick_name">
                        <ImageView android:id="@id/vipImage" android:layout_width="0.0dip" android:layout_height="0.0dip" android:scaleType="fitXY" android:onClick="onClick" />
                        <TextView android:textSize="@dimen/mz_text_size_mini" android:textColor="@color/empty_vip_text_color" android:layout_gravity="center_vertical" android:id="@id/vip_empty" android:paddingLeft="3.0dip" android:paddingRight="3.0dip" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="0.0dip" android:text="@string/empty_vip_label" android:onClick="onClick" />
                    </FrameLayout>
                </RelativeLayout>
                <TextView android:textSize="@dimen/mz_text_size_small" android:textColor="@color/white" android:layout_gravity="center_horizontal" android:id="@id/tv_account_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:singleLine="true" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="0.0dip" android:divider="@drawable/horizontal_divider_with_padding" android:showDividers="middle">
                <RelativeLayout android:paddingLeft="16.0dip" android:paddingTop="10.0dip" android:paddingRight="16.0dip" android:paddingBottom="10.0dip" android:layout_width="0.0dip" android:layout_height="0.0dip">
                    <ImageView android:id="@id/vertical_bar" android:layout_width="2.0dip" android:layout_height="15.0dip" android:src="@color/mz_theme_color_tomato" android:layout_centerVertical="true" />
                    <TextView android:textSize="@dimen/mz_text_size_small" android:textColor="@color/black" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginLeft="4.0dip" android:text="@string/my_level" android:layout_toRightOf="@id/vertical_bar" android:layout_centerVertical="true" />
                    <TextView android:textSize="@dimen/mz_text_size_small" android:textColor="@color/compaign_theme_color" android:id="@id/experience_tip" android:paddingRight="8.0dip" android:layout_width="0.0dip" android:layout_height="0.0dip" android:text="@string/experience_tip" android:layout_centerVertical="true" android:layout_alignParentEnd="true" />
                </RelativeLayout>
                <com.meizu.common.widget.ExperienceLayout android:id="@id/progress_bar" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginTop="8.0dip" android:layout_marginStart="12.0dip" android:layout_marginEnd="12.0dip" />
            </LinearLayout>
            <RelativeLayout android:background="@color/compaign_theme_color" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginTop="15.0dip" />
            <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="0.0dip">
                <com.meizu.common.widget.CategoryContainer android:orientation="vertical" android:id="@id/option_container" android:background="@color/compaign_theme_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:showDividers="middle" style="@style/ImageCategoryContainer">
                    <com.meizu.common.widget.ImageOptionItem android:id="@id/flyme_coin" android:layout_width="fill_parent" android:layout_height="wrap_content" meizu:Title="@string/label_flyme_coin" meizu:StateTextColor="@color/subText_color" meizu:LeftIcon="@drawable/icon_my_icon" meizu:TitleTextSize="@dimen/mz_text_size_normal" style="@style/OptionItem" />
                    <com.meizu.common.widget.ImageOptionItem android:id="@id/my_score" android:layout_width="fill_parent" android:layout_height="wrap_content" meizu:Title="@string/label_my_score" meizu:StateTextColor="@color/subText_color" meizu:LeftIcon="@drawable/icon_my_score" meizu:TitleTextSize="@dimen/mz_text_size_normal" style="@style/OptionItem" />
                    <com.meizu.common.widget.ImageOptionItem android:id="@id/my_vip" android:layout_width="fill_parent" android:layout_height="wrap_content" meizu:Title="@string/label_my_vip" meizu:StateTextColor="@color/compaign_theme_color" meizu:LeftIcon="@drawable/icon_my_vip" meizu:TitleTextSize="@dimen/mz_text_size_normal" style="@style/OptionItem" />
                    <com.meizu.common.widget.ImageOptionItem android:id="@id/my_award" android:layout_width="fill_parent" android:layout_height="wrap_content" meizu:Title="@string/label_my_award" meizu:LeftIcon="@drawable/icon_my_award" meizu:TitleTextSize="@dimen/mz_text_size_normal" style="@style/OptionItem" />
                    <com.meizu.common.widget.ImageOptionItem android:id="@id/my_coupon" android:layout_width="fill_parent" android:layout_height="wrap_content" meizu:Title="@string/label_my_coupon" meizu:LeftIcon="@drawable/icon_my_coupon" meizu:TitleTextSize="@dimen/mz_text_size_normal" style="@style/OptionItem" />
                    <com.meizu.common.widget.ImageOptionItem android:id="@id/my_exchange" android:layout_width="fill_parent" android:layout_height="wrap_content" meizu:Title="@string/label_my_exchange" meizu:LeftIcon="@drawable/icon_my_exchange" meizu:TitleTextSize="@dimen/mz_text_size_normal" style="@style/OptionItem" />
                    <com.meizu.common.widget.ImageOptionItem android:id="@id/my_address" android:layout_width="fill_parent" android:layout_height="wrap_content" meizu:Title="@string/label_my_address" meizu:LeftIcon="@drawable/icon_my_address" meizu:TitleTextSize="@dimen/mz_text_size_normal" style="@style/OptionItem" />
                </com.meizu.common.widget.CategoryContainer>
                <include layout="@layout/gray_block" />
                <com.meizu.common.widget.ImageOptionItem android:id="@id/my_wallet" android:layout_width="fill_parent" android:layout_height="wrap_content" meizu:Title="@string/label_my_wallet" meizu:LeftIcon="@drawable/icon_swallet" meizu:TitleTextSize="@dimen/mz_text_size_normal" style="@style/OptionItem" />
                <include layout="@layout/gray_block" />
                <com.meizu.common.widget.ImageOptionItem android:id="@id/item_setting" android:layout_width="fill_parent" android:layout_height="wrap_content" meizu:Title="@string/label_setting" meizu:LeftIcon="@drawable/icon_setting" meizu:TitleTextSize="@dimen/mz_text_size_normal" style="@style/OptionItem" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>