<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="670.0dip" android:weightSum="2.0" android:divider="@drawable/mz_card_list_divider_light"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:meizu="http://schemas.android.com/apk/res-auto">
    <com.meizu.common.widget.ActionCenterPointItem android:id="@id/item_sync" android:layout_width="0.0dip" android:layout_height="95.0dip" android:layout_weight="1.0" meizu:textInfo="@string/title_sync" meizu:imageSrc="@drawable/ic_sync_service" meizu:image_width="36.0dip" meizu:image_height="36.0dip" meizu:action_text_size="@dimen/action_status_size" meizu:action_text_color="@color/account_action_color" meizu:status_text_size="@dimen/action_status_size" meizu:status_text_color="@color/account_status_color" meizu:margin_top="10.0dip" />
	<com.meizu.common.widget.ActionCenterPointItem android:id="@id/item_find_phone" android:layout_width="0.0dip" android:layout_height="95.0dip" android:layout_weight="1.0" meizu:textInfo="@string/title_find_phone" meizu:imageSrc="@drawable/ic_find_phone" meizu:image_width="36.0dip" meizu:image_height="36.0dip" meizu:action_text_size="@dimen/action_status_size" meizu:action_text_color="@color/account_action_color" meizu:status_text_size="@dimen/action_status_size" meizu:status_text_color="@color/account_status_color" meizu:margin_top="10.0dip" />
	<com.meizu.common.widget.ActionCenterPointItem android:id="@id/item_backup" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" meizu:textInfo="@string/title_backup" meizu:imageSrc="@drawable/ic_back_up" meizu:image_width="0.0dip" meizu:image_height="0.0dip" meizu:action_text_size="@dimen/action_status_size" meizu:action_text_color="@color/account_action_color" meizu:status_text_size="@dimen/action_status_size" meizu:status_text_color="@color/account_status_color" meizu:margin_top="0.0dip" meizu:margin_bottom="0.0dip" />
    <com.meizu.common.widget.ActionCenterPointItem android:id="@id/item_cloud_storage" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" meizu:textInfo="@string/title_cloud_storage" meizu:imageSrc="@drawable/ic_cloud_storage" meizu:image_width="0.0dip" meizu:image_height="0.0dip" meizu:action_text_size="@dimen/action_status_size" meizu:action_text_color="@color/account_action_color" meizu:status_text_size="@dimen/action_status_size" meizu:status_text_color="@color/account_status_color" meizu:margin_top="0.0dip" meizu:margin_bottom="0.0dip" />
</LinearLayout>