<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:fitsSystemWindows="false" android:layout_width="0.0dip" android:layout_height="0.0dip" android:visibility="invisible"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="horizontal" android:id="@id/headerView" android:paddingTop="76.0dip" android:paddingBottom="@dimen/mz_list_image_item_content_padding_left" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.meizu.common.widget.banner.ConvenientBanner android:id="@id/scoreImg" android:layout_width="fill_parent" android:layout_height="160.0dip" app:left_margin="16.0dip" app:right_margin="16.0dip" app:pager_margin="8.0dip" app:isShowTurningPoint="false" app:page_limit="4" app:canLoop="true" />
    </LinearLayout>
    <FrameLayout android:background="@color/empty_image_color" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.meizu.common.widget.RefreshView android:id="@id/refresh_view" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <LinearLayout android:orientation="vertical" android:id="@id/contentView" android:background="@color/empty_image_color" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:id="@id/score_title" android:paddingLeft="@dimen/mz_list_image_item_content_padding_left" android:paddingTop="12.0dip" android:paddingRight="@dimen/mz_list_image_item_content_padding_right" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" style="@style/MainText" />
            <LinearLayout android:orientation="horizontal" android:paddingLeft="@dimen/mz_list_image_and_text_padding" android:paddingTop="2.0dip" android:paddingRight="@dimen/mz_list_image_and_text_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/mz_text_size_normal" android:textColor="@color/compaign_theme_color" android:id="@id/score_amount" android:paddingRight="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" style="@style/SubText" />
                <TextView android:textSize="@dimen/mz_text_size_normal" android:gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/exchange_score_label" android:singleLine="true" style="@style/SubText" />
                <TextView android:id="@id/original_amount" android:paddingRight="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:singleLine="true" style="@style/SubText" />
                <LinearLayout android:id="@id/money_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip">
                    <TextView android:textSize="16.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="+" style="@style/SubText" />
                    <TextView android:textSize="16.0sp" android:textColor="@color/compaign_theme_color" android:id="@id/money" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" style="@style/SubText" />
                    <TextView android:textSize="16.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/exchange_recorder_money_label" style="@style/SubText" />
                </LinearLayout>
                <TextView android:textColor="@color/white" android:id="@id/vip_mark" android:paddingLeft="3.0dip" android:paddingRight="3.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:singleLine="true" android:includeFontPadding="false" style="@style/SubText" />
            </LinearLayout>
            <RelativeLayout android:gravity="center_vertical" android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/mz_list_image_item_content_padding_left" android:paddingEnd="@dimen/mz_list_image_item_content_padding_right">
                <TextView android:textSize="14.0sp" android:gravity="left" android:id="@id/score_empire" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" style="@style/SubText" />
                <TextView android:textSize="14.0sp" android:id="@id/stock" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/stock_tip" android:layout_alignBaseline="@id/score_empire" android:layout_alignParentEnd="true" />
            </RelativeLayout>
            <com.meizu.common.widget.CategoryContainer android:orientation="vertical" android:id="@id/category_use" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginTop="12.0dip" android:layout_weight="1.0" android:showDividers="none" app:headerPaddingLeft="16.0dip" style="@style/CategoryContainer">
                <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <TextView android:gravity="center_vertical" android:id="@id/score_tip" android:paddingLeft="@dimen/mz_list_image_item_content_padding_left" android:paddingTop="8.0dip" android:paddingRight="@dimen/mz_list_image_item_content_padding_right" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/SubText" />
                </ScrollView>
            </com.meizu.common.widget.CategoryContainer>
            <include layout="@layout/bottom_button_layout" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>